flash bar added

--- a/presentation/views/footer.erb
+++ b/presentation/views/footer.erb
@@ -1,5 +1,5 @@
-<footer id="footer" style="padding-left: 5%">
-  <div class="row" style="padding: 2%">
+<footer id="footer">
+  <div class="row">
     <div class="col-lg-12">
       <ul class="list-unstyled">
         <li class="float-lg-left" href="http://iss.nthu.edu.tw">ISS</li>
