--- a/presentation/views/layout.erb
+++ b/presentation/views/layout.erb
@@ -7,8 +7,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/minty/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-4eGtnTOp6je5m6l1Zcp2WUGR9Y7kJZuAiD3Pk2GAW3uNRgHQSIqcrcAxBipzlbWP"
         crossorigin="anonymous">
-  <link rel='stylesheet' type="text/css"
-        href='presentation/assets/css/style.css'/>
+  <link rel='stylesheet' type="text/css" href="presentation/assets/css/style.css">
 
 </head>
 <body>
