--- a/presentation/views/top_nav.erb
+++ b/presentation/views/top_nav.erb
@@ -30,7 +30,7 @@
           <a class="nav-link" href="/auth/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link" href="/auth/register">Register</a>
         </li>
 
       <% end %>
