--- a/presentation/views/register.erb
+++ b/presentation/views/register.erb
@@ -21,12 +21,12 @@
               </small>
 
               <label for="InputEmail" class="font-weight-bold">Email</label>
-              <input name="email" class="form-control" id="InputEmail"
-                     aria-describedby="emailHelp" placeholder="Your email address">
+              <input name="email" class="form-control"
+                     id="InputEmail" placeholder="Your email address">
 
               <label for="InputPassword" class="font-weight-bold">Password</label>
-              <input name="password" class="form-control" id="exampleInputPassword"
-                     aria-describedby="passwordHelp" placeholder="Your password">
+              <input name="password" type="password" class="form-control"
+                     id="exampleInputPassword" placeholder="Your password">
             </div>
           </fieldset>
         </form>
