session & view objects

--- a/presentation/views/account.erb
+++ b/presentation/views/account.erb
@@ -17,13 +17,13 @@
             <tr class="table-primary">
               <th scope="row">User name</th>
               <td>
-                <%= @current_account['username'] %>
+                <%= @current_account.username %>
               </td>
             </tr>
             <tr>
               <th scope="row">Email</th>
               <td>
-                <%= @current_account['email'] %>
+                <%= @current_account.email %>
               </td>
             </tr>
             <tr class="table-primary">
