--- a/presentation/views/flash_bar.erb
+++ b/presentation/views/flash_bar.erb
@@ -6,7 +6,7 @@
 
 <% elsif flash[:notice] %>
   <div class="alert alert-dismissible alert-primary">
-    <strong>Hey! </strong>
+    <strong>Hi, </strong>
     <%= flash[:notice] %>
   </div>
 
