--- a/presentation/views/layout.erb
+++ b/presentation/views/layout.erb
@@ -13,9 +13,9 @@
 
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
           integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-          crossorigin="anonymous"></script>
+          crossorigin="anonymous"></script> -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
           integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
           crossorigin="anonymous"></script> -->
 
