--- a/presentation/views/login.erb
+++ b/presentation/views/login.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-4">
 
       <div class="bs-component">
         <form action="/auth/login" method="post" id="form-login">
@@ -28,7 +28,7 @@
       </div>
 
       <div class="bs-component">
-        <button type="submit" class="btn btn-secondary"
+        <button type="submit" class="btn"
                 form="form-login" id="button-login"> LOGIN </button>
       </div>
     </div>
