--- a/presentation/views/register.erb
+++ b/presentation/views/register.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-4">
       <div class="bs-component">
         <form action="/auth/register" method="post" id="form-emailing">
           <fieldset>
@@ -28,7 +28,7 @@
         </form>
 
         <div class="bs-component">
-          <button type="submit" class="btn btn-secondary"
+          <button type="submit" class="btn"
                   form="form-emailing" id="button-register"> VERIFY </button>
         </div>
       </div>
