--- a/presentation/views/layout.erb
+++ b/presentation/views/layout.erb
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>TalkUp</title>
-
-  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/minty/bootstrap.min.css"
+  <!-- <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/minty/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-4eGtnTOp6je5m6l1Zcp2WUGR9Y7kJZuAiD3Pk2GAW3uNRgHQSIqcrcAxBipzlbWP"
+        crossorigin="anonymous"> -->
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lux/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-4KIc2mnKfAA7VjirNLk2Sqp7jxFNq1q8+FhYGxhW2l52lt4HJsfksL+hjswHfbl/"
         crossorigin="anonymous">
-  <%= assets(:style) %>
-  <!-- <link rel="stylesheet" href="/assets/css/style.css"> -->
+  <%= assets(:css, type: 'text/css') %>
 </head>
 <body>
 
@@ -16,16 +17,15 @@
           integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
           crossorigin="anonymous"></script> -->
 
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
           integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-          crossorigin="anonymous"></script> -->
+          crossorigin="anonymous"></script>
 
   <%= render :top_nav %>
 
-  <div class="container">
-    <%= render :flash_bar %>
-    <%= yield %>
-  </div>
+  <%= render :flash_bar %>
+  <%= yield %>
+
 
 </body>
 
